Tweaked Newport photo caption.

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
     <a href="gallery/meat.jpg" title="Pastor vs. meat" data-gallery>
         <img src="gallery/thumbnails/meat.jpg" alt="astor vs. meat">
     </a>
-    <a href="gallery/newport.jpg" title="Newport" data-gallery>
-        <img src="gallery/thumbnails/newport.jpg" alt="Newport">
+    <a href="gallery/newport.jpg" title="Newport riverfront - very pleasant." data-gallery>
+        <img src="gallery/thumbnails/newport.jpg" alt="Newport riverfront - very pleasant.">
     </a>
     <a href="gallery/purecafe.jpg" title="Breakfast at Pure Cafe in Cardiff" data-gallery>
         <img src="gallery/thumbnails/purecafe.jpg" alt="Breakfast at Pure Cafe in Cardiff">
