--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li class="divider"></li>
                     <li class="dropdown-header">Nav header</li>
                     <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=Dx8CZyFM4b4">We're not from Newport</a></li>
                   </ul>
                 </li>
               </ul>
