Moved the Christmas photo towards the end of the gallery.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,29 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
+                    
+                    David Carboni
+davidcarboni
+AaronWitter
+Gatekeeper7
+Ian Hadley
+breneser
+Bren Eser
+daviesajw
+Andrew Davies
+pastor-methods
+Pastor Jurado-Traverso
+mylesroberts
+Myles Roberts
+https://github.com/
+                    
+                    <li><a href="https://github.com/davidcarboni">David Carboni</a></li>
+                    <li><a href="https://github.com/AaronWitter">Aaron Witter</a></li>
+                    <li><a href="https://github.com/Gatekeeper7">Ian Hadley</a></li>
+                    <li><a href="https://github.com/breneser">Bren Eser</a></li>
+                    <li><a href="https://github.com/pastor-methods">Pastor Jurado-Traverso</a></li>
+                    <li><a href="https://github.com/mylesroberts">Myles Roberts</a></li>
+                    <li><a href="https://github.com/daviesajw">Andrew Davies</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
                     <li class="divider"></li>
