--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="http://alpha.ons.gov.uk">ONS ALpha</a></li>
+                <li><a href="http://methodsdigital.co.uk">Methods Digital</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
