Sorting out the menu bar.

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://alpha.ons.gov.uk">Newport Explorers</a>
+              <a class="navbar-brand" href="http://davidcarboni.github.io/newport-explorers/">Newport Explorers</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li class="active"><a href="http://davidcarboni.github.io/newport-explorers/">Home</a></li>
                 <li><a href="http://alpha.ons.gov.uk">ONS ALpha</a></li>
                 <li><a href="http://methodsdigital.co.uk">Methods Digital</a></li>
                 <li class="dropdown">
