--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="http://davidcarboni.github.io/newport-explorers/">Home</a></li>
-                <li><a href="http://alpha.ons.gov.uk">ONS ALpha</a></li>
+                <li><a href="http://alpha.ons.gov.uk">ONS Alpha</a></li>
                 <li><a href="http://methodsdigital.co.uk">Methods Digital</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
