--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
         <img src="gallery/thumbnails/wigandpen.jpg" alt="After all the fun at Lilo and Gemelli, the Wig and Pen was good down-to-earth pub grub.">
     </a>
 
-    <a href="gallery/aaron.jpg" title="Aaron could get so focused that he would forget to eat." data-gallery>
-        <img src="gallery/thumbnails/aaron.jpg" alt="Aaron could get so focused that he would forget to eat.">
+    <a href="gallery/aaron.jpg" title="Aaron could get so focussed that he would forget to eat." data-gallery>
+        <img src="gallery/thumbnails/aaron.jpg" alt="Aaron could get so focussed that he would forget to eat.">
     </a>
     <a href="gallery/cote.jpg" title="Pastor attacking the best steak of the project at Cote" data-gallery>
         <img src="gallery/thumbnails/cote.jpg" alt="Pastor attacking the best steak of the project steak at Cote">
