Tweaked the last supper.

--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
     <a href="gallery/live.jpg" title="Deploying the final release over 4g at Reading station." data-gallery>
         <img src="gallery/thumbnails/live.jpg" alt="Deploying the final release over 4g at Reading station.">
     </a>
-    <a href="gallery/last-supper.jpg" title="A fine dinner at Cote to celebrate success and remember the the good times." data-gallery>
-        <img src="gallery/thumbnails/last-supper.jpg" alt="A fine dinner at Cote to celebrate success and remember the the good times.">
+  <a href="gallery/last-supper.jpg" title="The last supper: a fine dinner at Cote to celebrate success and remember the the good times." data-gallery>
+        <img src="gallery/thumbnails/last-supper.jpg" alt="The last supper: a fine dinner at Cote to celebrate success and remember the the good times.">
     </a>
 
 </div>
