Updated link to linkedin

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li><a href="https://github.com/davidcarboni">David Carboni</a></li>
                     <li><a href="https://github.com/AaronWitter">Aaron Witter</a></li>
                     <li><a href="https://github.com/Gatekeeper7">Ian Hadley</a></li>
-                    <li><a href="https://github.com/breneser">Bren Eser</a></li>
+                    <li><a href="https://www.linkedin.com/pub/burhan-eser/47/81b/342">Bren Eser</a></li>
                     <li><a href="https://github.com/pastor-methods">Pastor Jurado-Traverso</a></li>
                     <li><a href="https://github.com/mylesroberts">Myles Roberts</a></li>
                     <li><a href="https://github.com/daviesajw">Andrew Davies</a></li>
